--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="initial-scale=1"/>
 
-    <link rel="stylesheet" href="../node_modules/angular-material/angular-material.min.css">
-    <link rel="stylesheet" href="../node_modules/angular-material-data-table/dist/md-data-table.min.css">
+    <link rel="stylesheet" href="lib/angular-material/angular-material.min.css">
+    <link rel="stylesheet" href="lib/angular-material-data-table/dist/md-data-table.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -22,17 +22,17 @@
 </body>
 
 <!-- Angular modules -->
-<script src="../node_modules/angular/angular.js"></script>
-<script src="../node_modules/angular-route/angular-route.js"></script>
-<script src="../node_modules/angular-animate/angular-animate.min.js"></script>
-<script src="../node_modules/angular-aria/angular-aria.min.js"></script>
-<script src="../node_modules/angular-filter/dist/angular-filter.min.js"></script>
-<script src="../node_modules/angular-local-storage/dist/angular-local-storage.min.js"></script>
-<script src="../node_modules/angular-css/angular-css.min.js"></script>
+<script src="lib/angular/angular.js"></script>
+<script src="lib/angular-route/angular-route.js"></script>
+<script src="lib/angular-animate/angular-animate.min.js"></script>
+<script src="lib/angular-aria/angular-aria.min.js"></script>
+<script src="lib/angular-filter/dist/angular-filter.min.js"></script>
+<script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
+<script src="lib/angular-css/angular-css.min.js"></script>
 
 <!-- MDL -->
-<script src="../node_modules/angular-material/angular-material.min.js"></script>
-<script src="../node_modules/angular-material-data-table/dist/md-data-table.min.js"></script>
+<script src="lib/angular-material/angular-material.min.js"></script>
+<script src="lib/angular-material-data-table/dist/md-data-table.min.js"></script>
 
 <!-- Custom JS -->
 <script src="js/app.js"></script>
