Fit the schedule for more timeslots

--- a/client/index.html
+++ b/client/index.html
@@ -45,4 +45,7 @@
 <!-- Services -->
 <script src="js/services/Courses.js"></script>
 
+<!-- Filter -->
+<script src="js/filter/course.js"></script>
+
 </html>
