--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,7 @@
 <script src="js/app.js"></script>
 
 <!-- Controller -->
+<script src="js/controller/AppCtrl.js"></script>
 <script src="js/controller/HomeCtrl.js"></script>
 <script src="js/controller/CoursesCtrl.js"></script>
 <script src="js/controller/OverviewCtrl.js"></script>
