ideas for advanced homepage styling

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body ng-app="Campus">
+<body ng-app="Campus" class="body-home">
 <app>
     <!-- loading screen -->
     <p id="loading">Loading...</p>
