--- a/client/index.html
+++ b/client/index.html
@@ -37,17 +37,18 @@
 <script src="js/app.js"></script>
 
 <!-- Controller -->
-<script src="js/controller/AppCtrl.js"></script>
-<script src="js/controller/HomeCtrl.js"></script>
-<script src="js/controller/CoursesCtrl.js"></script>
-<script src="js/controller/OverviewCtrl.js"></script>
-<script src="js/controller/DetailsCtrl.js"></script>
+<script src="js/controllers/AppCtrl.js"></script>
+<script src="js/controllers/HomeCtrl.js"></script>
+<script src="js/controllers/CoursesCtrl.js"></script>
+<script src="js/controllers/OverviewCtrl.js"></script>
+<script src="js/controllers/DetailsCtrl.js"></script>
 
 <!-- Services -->
-<script src="js/services/Courses.js"></script>
+<script src="js/services/CoursesFactory.js"></script>
 
 <!-- Filter -->
-<script src="js/filter/course.js"></script>
-<script src="js/filter/credits.js"></script>
+<script src="js/filter/courseFilter.js"></script>
+<script src="js/filter/creditsFilter.js"></script>
+<script src="js/filter/lecturersFilter.js"></script>
 
 </html>
