Add some length constraints

--- a/client/index.html
+++ b/client/index.html
@@ -47,7 +47,7 @@
 <script src="js/services/CoursesFactory.js"></script>
 
 <!-- Filter -->
-<script src="js/filter/courseFilter.js"></script>
+<script src="js/filter/lengthFilter.js"></script>
 <script src="js/filter/creditsFilter.js"></script>
 <script src="js/filter/lecturersFilter.js"></script>
 
