--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,7 @@
 
 <!-- Filter -->
 <script src="js/filter/lengthFilter.js"></script>
+<script src="js/filter/languagesFilter.js"></script>
 <script src="js/filter/lecturersFilter.js"></script>
 
 </html>
