--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>RWTH Courses</title>
+    <link rel="icon" href="img/favicon.png">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
