time and week in unscheduled

--- a/client/index.html
+++ b/client/index.html
@@ -50,5 +50,7 @@
 <script src="js/filter/lengthFilter.js"></script>
 <script src="js/filter/languagesFilter.js"></script>
 <script src="js/filter/lecturersFilter.js"></script>
+<script src="js/filter/timeFilter.js"></script>
+<script src="js/filter/weekFilter.js"></script>
 
 </html>
