URI decoding in details

--- a/client/index.html
+++ b/client/index.html
@@ -53,5 +53,6 @@
 <script src="js/filter/lecturersFilter.js"></script>
 <script src="js/filter/timeFilter.js"></script>
 <script src="js/filter/weekFilter.js"></script>
+<script src="js/filter/htmlFilter.js"></script>
 
 </html>
