--- a/client/index.html
+++ b/client/index.html
@@ -54,5 +54,6 @@
 <script src="js/filter/timeFilter.js"></script>
 <script src="js/filter/weekFilter.js"></script>
 <script src="js/filter/htmlFilter.js"></script>
+<script src="js/filter/capitalizeFilter.js"></script>
 
 </html>
